[package]
name = "bevy_chess"
version = "0.1.0"
authors = ["guimcaballero <guim@caballerocoll.com>"]
edition = "2021"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_mod_picking = "0.9"


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
